[package]
name = "introduction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = {version = "0.5.1", features = ["full"]}
hyper = "1.5.1"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = "0.6.2"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
